# octoprint-layer-notify

./: .gitignore  README.md  layer_notify.md  pyproject.toml  setup.py
docs/: SCREENSHOTS.md
octoprint_layer_notify/: __init__.py
octoprint_layer_notify/static/js/: layer_notify.js
octoprint_layer_notify/templates/: layer_notify_settings.jinja2  layer_notify_tab.jinja2
